Complete basket ui and logic & fix logout

--- a/BilyonerCase/Config.xcconfig
+++ b/BilyonerCase/Config.xcconfig
@@ -8,4 +8,4 @@
 // Configuration settings file format documentation can be found at:
 // https://developer.apple.com/documentation/xcode/adding-a-build-configuration-file-to-your-project
 
-API_KEY = "13be82b867b231fac69d5d73b0512914"
+API_KEY = 13be82b867b231fac69d5d73b0512914
